--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <div id="card_3">
                     <p>learn more</p>
                 </div>
-                <div id="card_4">
+                <div id="card_4" style="background-image: url(./images/new_event.png);">
+                    <p>Upcoming Event</p>
                     <p>learn more</p>
                 </div>
             </span>
@@ -81,18 +82,10 @@
                 </h2>
             </span>
             <span class="card">
-                <div id="card_1">
-                    <p>learn more</p>
-                </div>
-                <div id="card_2">
-                    <p>learn more</p>
-                </div>
-                <div id="card_3">
-                    <p>learn more</p>
-                </div>
-                <div id="card_4">
-                    <p>learn more</p>
-                </div>
+                <div id="card_1" style="background-image: url(./images/food.png);"></div>
+                <div id="card_2" style="background-image: url(./images/cloth.png);"></div>
+                <div id="card_3" style="background-image: url(./images/bed_sheet.png);"></div>
+                <div id="card_4" style="background-image: url(./images/water.png);"></div>
             </span>
             <span id="heading_3">
                 <p>
@@ -106,17 +99,9 @@
                 </h2>
             </span>
             <span class="tcard">
-                <div id="tcard_1"></div>
-                <div id="tcard_2"></div>
-                <div id="tcard_3">
-                    <img src="./images/">
-                    <span id="data">
-                        <h3>Name   : Sudhakar</h3>
-                        <h3>Role   : Developer</h3>
-                        <h3>E-mail : msudhakar.dev@gmail.com</h3>
-                        <p><b style="font-size: 20px;">About</b> : I am a software developer with a knowledge to compete in the technology world</p>
-                    </span>
-                </div>
+                <div id="tcard_1" style="background-image: url(./images/team_pic_1.png); background-repeat: no-repeat; background-size: cover;"></div>
+                <div id="tcard_2" style="background-image: url(./images/team_pic_2.png); background-repeat: no-repeat; background-size: cover
+                ;"></div>
             </span>
         </div>
 
@@ -131,10 +116,10 @@
             </span>
             <span class="ccard">
                 <address>
+
                     <p>e-mail  : msudhakar.dev@gmail.com</p>
-                    <p>Phone   : 1234567890</p>
-                    <p>Address : xyz,company,tuyt</p>
-                    <p><a href="">linked</a>,<a href="">nukri</a>,<a href="">github</a></p>
+                    <p>Address : xyz,company,tuty</p>
+                    <p><a href="www.linkedin.com/in/sudhakar-m-430809315">linked</a>,<a href="">nukri</a>,<a href="">github</a></p>
                 </address>
                     <form>
                         <input type="email" placeholder="From...">
