--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <p><a href="www.linkedin.com/in/sudhakar-m-430809315">linked</a>,<a href="">nukri</a>,<a href="">github</a></p>
                 </address>
                     <form>
-                        <input type="email" placeholder="From...">
+                        <input type="email" placeholder="E-mail...">
                         <input type="text" placeholder="Subject...">
                         <textarea placeholder="Content..." style="height: 100px; width: 400px; resize: none; border-radius: 8px;"></textarea>
                         <button type="submit">send</button>
@@ -134,5 +134,5 @@
         </div>
     </div>
 
-    <script src="./Charity/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
