donation card added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./stylesheet/istyle.css">
     <title>ABC Charity</title>
 </head>
-<body>
+<body id="body">
     <div class="container">
         <div class="home" id="home">
             <nav>
@@ -131,6 +131,17 @@
 
         <div class="donation_card" id="donation_card">
             <p onclick="close_card()">&times;</p>
+            <div class="payment_card">
+                <h2>Every single Rupees is a Help</h2>
+                <h3>this is a heading 3</h3>
+                <span class="payment_btns">
+                    <button>100</button>
+                    <button>200</button>
+                    <button>500</button>
+                    <button>1000</button>
+                    <button>Custom</button>
+                </span>
+            </div>
         </div>
     </div>
 
