--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2 id="heading_2">Make a Difference Today</h2>
             <h3 id="heading_3">Your donation helps us deliver food,cloths,and care to those in need.</h3>
             <div class="payment_card">
-                <span class="payment_btns">
+                <span class="payment_btns" id="payment_btns">
                     <button onclick="paynow(100)">100</button>
                     <button onclick="paynow(200)">200</button>
                     <button onclick="paynow(500)">500</button>
@@ -149,7 +149,7 @@
                     <button onclick="custom_amt()" id="custom">Custom</button>
                     <input type="text" placeholder="Enter amount" id="custom_amount">
                 </span>
-                <span class="qr-card">
+                <span class="qr-card" id="qr-card">
                     <img src="./images/qr_code.png">
                     <p>UPI Id : abcchaarity@icicibank</p>
                     <p>Bank Name : ICICI Bank </p>
